--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
         </div>
         <div class="right-half half-container flex flex-center">
             <div class="circle-container flex flex-center cursor-pointer circle overflow-hidden position-relative">
-                <div class="circle-container-img image1" data-collection='1'><img class="image cover-parent" src="./4.jpg" alt="Image 1"></div>
-                <div class="circle-container-img image2" data-collection='2'><img class="image cover-parent" src="./3.jpg" alt="Image 2"></div>
-                <div class="circle-container-img image3" data-collection='3'><img class="image cover-parent" src="./2.1.jpg" alt="Image 3"></div>
-                <div class="circle-container-img image4" data-collection='4'><img class="image cover-parent" src=".1.jpg" alt="Image 4"></div>
+                <div class="circle-container-img image1" data-collection='1'><img class="image cover-parent" src="./image/4.jpg" alt="Image 1"></div>
+                <div class="circle-container-img image2" data-collection='2'><img class="image cover-parent" src="./imgae/3.jpg" alt="Image 2"></div>
+                <div class="circle-container-img image3" data-collection='3'><img class="image cover-parent" src="./image/2.1.jpg" alt="Image 3"></div>
+                <div class="circle-container-img image4" data-collection='4'><img class="image cover-parent" src="./image/1.jpg" alt="Image 4"></div>
             </div>
         
         </div>
